@@ -23,20 +23,23 @@ gfloppy/src/progress.c
 gnome-dictionary/data/default.desktop.in
 gnome-dictionary/data/GNOME_DictionaryApplet.server.in.in
 gnome-dictionary/data/GNOME_DictionaryApplet.xml
-gnome-dictionary/data/gnome-dictionary.desktop.in
+gnome-dictionary/data/gnome-dictionary.desktop.in.in
 gnome-dictionary/data/gnome-dictionary.schemas.in
 gnome-dictionary/data/gnome-dictionary-preferences.glade
 gnome-dictionary/data/spanish.desktop.in
 gnome-dictionary/libgdict/gdict-client-context.c
 gnome-dictionary/libgdict/gdict-context.c
+gnome-dictionary/libgdict/gdict-debug.c
 gnome-dictionary/libgdict/gdict-defbox.c
 gnome-dictionary/libgdict/gdict-entry.c
 gnome-dictionary/libgdict/gdict-source.c
 gnome-dictionary/libgdict/gdict-source-loader.c
+gnome-dictionary/libgdict/gdict-speller.c
 gnome-dictionary/libgdict/gdict-utils.c
 gnome-dictionary/src/gdict-about.c
 gnome-dictionary/src/gdict-app.c
 gnome-dictionary/src/gdict-applet.c
+gnome-dictionary/src/gdict-common.c
 gnome-dictionary/src/gdict-pref-dialog.c
 gnome-dictionary/src/gdict-print.c
 gnome-dictionary/src/gdict-source-dialog.c
