@@ -1,3 +1,7 @@
+2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* po/POTFILES.in: Update gnome-dictionary.
+
 2006-04-27  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* gnome-dictionary/docs/.cvsignore:
